--- a/packages/schema-sdk/tsconfig.json
+++ b/packages/schema-sdk/tsconfig.json
@@ -1,19 +1,9 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src/",
-    "target": "es2022",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "strictNullChecks": false,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "declaration": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "node"
+    "rootDir": "src/"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*.ts"],
   "exclude": ["dist", "node_modules", "**/*.spec.*", "**/*.test.*"]
 }
