--- a/packages/schema-typescript/package.json
+++ b/packages/schema-typescript/package.json
@@ -29,11 +29,14 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@babel/generator": "^7.24.4",
-    "@babel/types": "^7.24.0",
-    "@interweb-utils/casing": "^0.2.0",
+    "@babel/generator": "^7.28.5",
+    "@babel/types": "^7.28.5",
+    "@interweb-utils/casing": "^0.3.0",
     "deepmerge": "^4.3.1",
     "minimatch": "^9.0.4"
+  },
+  "devDependencies": {
+    "@types/babel__generator": "^7.27.0"
   },
   "keywords": [
     "jsonschema",
