--- a/packages/fetch-api-client/package.json
+++ b/packages/fetch-api-client/package.json
@@ -20,10 +20,10 @@
     "url": "https://github.com/hyperweb-io/dev-utils/issues"
   },
   "scripts": {
-    "copy": "cpy ../../LICENSE README.md package.json dist --flat",
-    "clean": "rimraf dist/**",
+    "copy": "makage assets",
+    "clean": "makage clean dist",
     "prepublishOnly": "npm run build",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
+    "build": "npm run clean && makage build-ts && npm run copy",
     "lint": "eslint . --fix",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -34,6 +34,7 @@
     "isomorphic-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@types/isomorphic-fetch": "^0.0.39"
+    "@types/isomorphic-fetch": "^0.0.39",
+    "makage": "workspace:*"
   }
 }
