--- a/packages/inquirerer/package.json
+++ b/packages/inquirerer/package.json
@@ -20,10 +20,10 @@
     "url": "https://github.com/hyperweb-io/dev-utils/issues"
   },
   "scripts": {
-    "copy": "cpy ../../LICENSE README.md package.json dist --flat",
-    "clean": "rimraf dist/**",
+    "copy": "makage assets",
+    "clean": "makage clean dist",
     "prepublishOnly": "npm run build",
-    "build": "npm run clean; tsc; tsc -p tsconfig.esm.json; npm run copy",
+    "build": "npm run clean && makage build-ts && npm run copy",
     "dev": "ts-node dev/index",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -36,6 +36,7 @@
   },
   "keywords": [],
   "devDependencies": {
-    "@types/minimist": "^1.2.5"
+    "@types/minimist": "^1.2.5",
+    "makage": "workspace:*"
   }
 }
