--- a/packages/create-gen-app/package.json
+++ b/packages/create-gen-app/package.json
@@ -32,7 +32,7 @@
     "inquirerer": "workspace:*"
   },
   "devDependencies": {
-    "makage": "workspace:*"
+    "makage": "0.1.3"
   },
   "keywords": []
 }
