--- a/packages/jsonld-tools/package.json
+++ b/packages/jsonld-tools/package.json
@@ -29,7 +29,7 @@
     "test:debug": "node --inspect node_modules/.bin/jest --runInBand"
   },
   "devDependencies": {
-    "makage": "workspace:*"
+    "makage": "0.1.3"
   },
   "bugs": {
     "url": "https://github.com/hyperweb-io/dev-utils/issues"
