--- a/packages/node-api-client/package.json
+++ b/packages/node-api-client/package.json
@@ -32,7 +32,7 @@
     "@interweb/http-errors": "workspace:*"
   },
   "devDependencies": {
-    "makage": "workspace:*"
+    "makage": "0.1.3"
   },
   "keywords": []
 }
