--- a/packages/schema-typescript/package.json
+++ b/packages/schema-typescript/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@types/babel__generator": "^7.27.0",
-    "makage": "workspace:*"
+    "makage": "0.1.3"
   },
   "keywords": [
     "jsonschema",
