--- a/packages/strfy-js/package.json
+++ b/packages/strfy-js/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/hyperweb-io/dev-utils/issues"
   },
   "devDependencies": {
-    "makage": "workspace:*",
+    "makage": "0.1.3",
     "nested-obj": "workspace:*"
   },
   "dependencies": {
