--- a/packages/create-gen-app/package.json
+++ b/packages/create-gen-app/package.json
@@ -2,7 +2,7 @@
   "name": "create-gen-app",
   "version": "0.1.2",
   "author": "Dan Lynch <pyramation@gmail.com>",
-  "description": "Clone and customize template repositories",
+  "description": "Clone and customize template repositories with variable replacement",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
