--- a/packages/fetch-api-client/package.json
+++ b/packages/fetch-api-client/package.json
@@ -2,7 +2,7 @@
   "name": "@interweb/fetch-api-client",
   "version": "0.7.3",
   "author": "Dan Lynch <pyramation@gmail.com>",
-  "description": "Node.js API Client",
+  "description": "Universal Fetch-based HTTP client for Node.js and browsers",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
