--- a/packages/inquirerer/package.json
+++ b/packages/inquirerer/package.json
@@ -2,7 +2,7 @@
   "name": "inquirerer",
   "version": "2.1.2",
   "author": "Dan Lynch <pyramation@gmail.com>",
-  "description": "inquirerer",
+  "description": "TypeScript-first library for building beautiful CLI interfaces with interactive prompts",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
