--- a/packages/nested-obj/package.json
+++ b/packages/nested-obj/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nested-obj",
   "version": "0.1.2",
-  "description": "manipulate deep objects safely and simply",
+  "description": "Safely access and modify nested object properties using string paths",
   "author": "Dan Lynch <pyramation@gmail.com>",
   "homepage": "https://github.com/hyperweb-io/dev-utils",
   "license": "MIT",
