--- a/packages/node-api-client/package.json
+++ b/packages/node-api-client/package.json
@@ -2,7 +2,7 @@
   "name": "@interweb/node-api-client",
   "version": "0.8.3",
   "author": "Dan Lynch <pyramation@gmail.com>",
-  "description": "Node.js API Client",
+  "description": "Lightweight HTTP client for Node.js RESTful APIs",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
