--- a/packages/create-gen-app/package.json
+++ b/packages/create-gen-app/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.3",
   "author": "Dan Lynch <pyramation@gmail.com>",
   "description": "Clone and customize template repositories with variable replacement",
+  "bin": {
+    "create-gen-app": "./cli.js",
+    "cga": "./cli.js"
+  },
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
@@ -20,19 +24,22 @@
     "url": "https://github.com/hyperweb-io/dev-utils/issues"
   },
   "scripts": {
-    "copy": "makage assets",
-    "clean": "makage clean",
-    "prepublishOnly": "npm run build",
-    "build": "npm run clean && makage build-ts && npm run copy",
-    "dev": "ts-node dev/index",
+    "copy": "copyfiles -f ../../LICENSE README.md package.json \"licenses-templates/**/*\" dist",
+    "clean": "del dist/**",
+    "prepare": "pnpm run build",
+    "build": "pnpm run clean && tsc && tsc -p tsconfig.esm.json && pnpm run copy",
+    "dev": "node -r ts-node/register dev/index.ts",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "inquirerer": "workspace:*"
+    "inquirerer": "workspace:*",
+    "minimist": "^1.2.8"
   },
   "devDependencies": {
-    "makage": "0.1.5"
+    "@types/minimist": "^1.2.5",
+    "copyfiles": "^2.4.1",
+    "del-cli": "^5.1.0"
   },
   "keywords": []
 }
