--- a/packages/inquirerer/package.json
+++ b/packages/inquirerer/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "deepmerge": "^4.3.1",
+    "find-and-require-package-json": "workspace:*",
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.8",
     "yanse": "workspace:*"
