--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@interweb/dev-utils",
   "version": "0.0.1",
-  "author": "Interweb, Inc. <developers@interweb.co>",
+  "author": "Constructive <developers@constructive.io>",
   "private": true,
   "repository": {
     "type": "git",
