--- a/packages/create-gen-app/package.json
+++ b/packages/create-gen-app/package.json
@@ -1,12 +1,12 @@
 {
   "name": "create-gen-app",
   "version": "0.3.3",
-  "author": "Dan Lynch <pyramation@gmail.com>",
+  "author": "Constructive <pyramation@constructive.io>",
   "description": "Clone and customize template repositories with variable replacement",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
-  "homepage": "https://github.com/hyperweb-io/dev-utils",
+  "homepage": "https://github.com/constructive-io/dev-utils",
   "license": "MIT",
   "publishConfig": {
     "access": "public",
@@ -14,10 +14,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hyperweb-io/dev-utils"
+    "url": "https://github.com/constructive-io/dev-utils"
   },
   "bugs": {
-    "url": "https://github.com/hyperweb-io/dev-utils/issues"
+    "url": "https://github.com/constructive-io/dev-utils/issues"
   },
   "scripts": {
     "copy": "copyfiles -f ../../LICENSE README.md package.json dist && copyfiles -f \"licenses-templates/**/*\" dist/licenses-templates",
