--- a/packages/nested-obj/package.json
+++ b/packages/nested-obj/package.json
@@ -2,8 +2,8 @@
   "name": "nested-obj",
   "version": "0.1.5",
   "description": "Safely access and modify nested object properties using string paths",
-  "author": "Dan Lynch <pyramation@gmail.com>",
-  "homepage": "https://github.com/hyperweb-io/dev-utils",
+  "author": "Constructive <pyramation@constructive.io>",
+  "homepage": "https://github.com/constructive-io/dev-utils",
   "license": "MIT",
   "main": "index.js",
   "module": "esm/index.js",
@@ -24,11 +24,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hyperweb-io/dev-utils"
+    "url": "https://github.com/constructive-io/dev-utils"
   },
   "keywords": [],
   "bugs": {
-    "url": "https://github.com/hyperweb-io/dev-utils/issues"
+    "url": "https://github.com/constructive-io/dev-utils/issues"
   },
   "devDependencies": {
     "makage": "0.1.8"
