--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cpy-cli": "^6.0.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.3.0",
     "jest": "^30.2.0",
