--- a/packages/clean-ansi/package.json
+++ b/packages/clean-ansi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clean-ansi",
   "version": "0.1.4",
-  "author": "Constructive <pyramation@constructive.io>",
+  "author": "Constructive <developers@constructive.io>",
   "description": "Remove ANSI escape codes from strings",
   "main": "index.js",
   "module": "esm/index.js",
