--- a/packages/inquirerer/package.json
+++ b/packages/inquirerer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "inquirerer",
   "version": "2.1.13",
-  "author": "Constructive <pyramation@constructive.io>",
+  "author": "Constructive <developers@constructive.io>",
   "description": "TypeScript-first library for building beautiful CLI interfaces with interactive prompts",
   "main": "index.js",
   "module": "esm/index.js",
