--- a/packages/jsonld-tools/package.json
+++ b/packages/jsonld-tools/package.json
@@ -2,7 +2,7 @@
   "name": "jsonldjs",
   "version": "0.2.8",
   "description": "Powerful JSON-LD builder with comprehensive filtering and subgraph extraction",
-  "author": "Constructive <pyramation@constructive.io>",
+  "author": "Constructive <developers@constructive.io>",
   "homepage": "https://github.com/constructive-io/dev-utils",
   "license": "MIT",
   "main": "index.js",
