--- a/packages/node-api-client/package.json
+++ b/packages/node-api-client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@interweb/node-api-client",
   "version": "0.8.7",
-  "author": "Constructive <pyramation@constructive.io>",
+  "author": "Constructive <developers@constructive.io>",
   "description": "Lightweight HTTP client for Node.js RESTful APIs",
   "main": "index.js",
   "module": "esm/index.js",
