--- a/packages/schema-sdk/package.json
+++ b/packages/schema-sdk/package.json
@@ -2,7 +2,7 @@
   "name": "schema-sdk",
   "version": "0.15.10",
   "description": "Convert JSON Schema OpenAPI Spec to TypeScript Clients",
-  "author": "Constructive <pyramation@constructive.io>",
+  "author": "Constructive <developers@constructive.io>",
   "homepage": "https://github.com/constructive-io/dev-utils",
   "license": "MIT",
   "main": "index.js",
