--- a/packages/schema-ts-cli/package.json
+++ b/packages/schema-ts-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@schema-typescript/cli",
   "version": "0.5.8",
-  "author": "Constructive <pyramation@constructive.io>",
+  "author": "Constructive <developers@constructive.io>",
   "description": "schema-typescript CLI",
   "main": "index.js",
   "module": "esm/index.js",
