--- a/packages/strfy-js/package.json
+++ b/packages/strfy-js/package.json
@@ -2,7 +2,7 @@
   "name": "strfy-js",
   "version": "3.1.6",
   "description": "Stringify JSON as JavaScript with extended serialization capabilities",
-  "author": "Constructive <pyramation@constructive.io>",
+  "author": "Constructive <developers@constructive.io>",
   "homepage": "https://github.com/constructive-io/dev-utils",
   "license": "MIT",
   "main": "index.js",
