--- a/packages/yanse/package.json
+++ b/packages/yanse/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yanse",
   "version": "0.1.7",
-  "author": "Constructive <pyramation@constructive.io>",
+  "author": "Constructive <developers@constructive.io>",
   "description": "Fast and lightweight terminal color styling library with chalk-like API",
   "main": "index.js",
   "module": "esm/index.js",
