fix: update CI workflow to use new package names
- Replace 'inquirerer' with 'genomic' in test matrix
- Replace 'create-gen-app' with 'scaffolds' in test matrix
- Add 'utils' package to test matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,9 @@ jobs:
           - schema-typescript
           - strfy-js
           - yanse
-          - inquirerer
-          - create-gen-app
+          - genomic
+          - scaffolds
+          - utils
           - create-gen-app-test
 
     steps:
