fix: update test snapshots and utils package test script
- Update snapshot files to use 'Genomic' instead of 'Inquirerer'
- Add --passWithNoTests flag to utils package test script

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -24,7 +24,7 @@
     "clean": "makage clean",
     "prepublishOnly": "npm run build",
     "build": "makage build",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch"
   },
   "dependencies": {
