feat: add inquirerer backwards-compat package (v2.4.0)
- Re-exports genomic with old class names (Inquirerer, InquirererOptions)
- Provides migration path for existing inquirerer users
- Includes README with migration instructions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,7 @@ jobs:
           - strfy-js
           - yanse
           - genomic
+          - inquirerer
           - scaffolds
           - utils
           - create-gen-app-test
