--- a/packages/inquirerer/package.json
+++ b/packages/inquirerer/package.json
@@ -1,8 +1,8 @@
 {
   "name": "inquirerer",
-  "version": "3.0.1",
+  "version": "3.5.0",
   "author": "Constructive <developers@constructive.io>",
-  "description": "TypeScript-first library for building beautiful CLI interfaces with interactive prompts (now maintained as 'genomic')",
+  "description": "TypeScript-first library for building beautiful CLI interfaces with interactive prompts",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
@@ -24,20 +24,21 @@
     "clean": "makage clean",
     "prepublishOnly": "npm run build",
     "build": "makage build",
-    "test": "jest --passWithNoTests",
+    "dev": "ts-node dev/index",
+    "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "genomic": "workspace:*"
+    "deepmerge": "^4.3.1",
+    "find-and-require-package-json": "workspace:*",
+    "js-yaml": "^4.1.0",
+    "minimist": "^1.2.8",
+    "yanse": "workspace:*"
   },
-  "keywords": [
-    "cli",
-    "prompt",
-    "interactive",
-    "terminal",
-    "inquirer"
-  ],
+  "keywords": [],
   "devDependencies": {
+    "@types/minimist": "^1.2.5",
+    "clean-ansi": "workspace:*",
     "makage": "0.1.8"
   }
 }
