--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@genomic/utils",
-  "version": "2.0.1",
+  "name": "@inquirerer/utils",
+  "version": "2.0.2",
   "author": "Constructive <developers@constructive.io>",
   "description": "CLI lifecycle utilities for building command-line applications",
   "main": "index.js",
