refactor: rename packages/utils folder to packages/inquirerer-utils and update README

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
           - yanse
           - inquirerer
           - genomic
-          - utils
+          - inquirerer-utils
           - create-gen-app-test
 
     steps:
