--- a/packages/inquirerer/package.json
+++ b/packages/inquirerer/package.json
@@ -19,15 +19,18 @@
   "bugs": {
     "url": "https://github.com/constructive-io/dev-utils/issues"
   },
-  "scripts": {
-    "copy": "makage assets",
-    "clean": "makage clean",
-    "prepublishOnly": "npm run build",
-    "build": "makage build",
-    "dev": "ts-node dev/index",
-    "test": "jest",
-    "test:watch": "jest --watch"
-  },
+    "scripts": {
+      "copy": "makage assets",
+      "clean": "makage clean",
+      "prepublishOnly": "npm run build",
+      "build": "makage build",
+      "dev": "ts-node dev/index",
+      "dev:spinner": "ts-node dev/demo-spinner",
+      "dev:chat": "ts-node dev/demo-chat",
+      "dev:upgrade": "ts-node dev/demo-upgrade",
+      "test": "jest",
+      "test:watch": "jest --watch"
+    },
   "dependencies": {
     "deepmerge": "^4.3.1",
     "find-and-require-package-json": "workspace:*",
